--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-es2015-loose-rollup": "^7.0.0",
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.0.1",
+    "commander": "^2.9.0",
     "electron": "^1.7.2",
     "electron-mocha": "^3.4.0",
     "eslint": "^3.19.0",
