--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "silent": false
   },
   "dependencies": {
+    "d3-array": "^1.2.0",
     "d3-dsv": "^1.0.5",
     "lodash": "^4.17.4",
     "simple-statistics": "^4.1.0",
