eslint: no-console

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,15 @@
     "comma-dangle": [
       "error",
       "never"
+    ],
+    "no-console": [
+      "error",
+      {
+        "allow": [
+          "warn",
+          "error"
+        ]
+      }
     ]
   }
 }
