--- a/package.json
+++ b/package.json
@@ -58,9 +58,14 @@
   "dependencies": {
     "d3-array": "^1.2.0",
     "d3-dsv": "^1.0.5",
+    "d3-geo": "^1.6.4",
+    "d3-geo-projection": "^2.1.2",
     "d3-hexbin": "^0.2.2",
     "lodash": "^4.17.4",
+    "point-at-length": "^1.0.2",
     "simple-statistics": "^4.1.0",
+    "topojson": "^3.0.0",
+    "topojson-client": "^3.0.0",
     "wolfy87-eventemitter": "^5.1.0"
   }
 }
