--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "d3-geo": "^1.6.4",
     "d3-geo-projection": "^2.1.2",
     "d3-hexbin": "^0.2.2",
+    "d3-voronoi": "^1.1.2",
     "lodash": "^4.17.4",
     "point-at-length": "^1.0.2",
     "simple-statistics": "^4.1.0",
