--- a/package.json
+++ b/package.json
@@ -16,26 +16,25 @@
   "license": "MIT",
   "devDependencies": {
     "@lite-js/torch": "^0.1.5",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-es2015-loose-rollup": "^7.0.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.23.0",
     "chai": "^4.0.1",
     "commander": "^2.9.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-egg": "^4.2.0",
     "pre-commit": "^1.2.2",
-    "rollup": "^0.42.0",
-    "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "uglify-js": "^3.0.15"
+    "uglify-js": "^3.0.15",
+    "webpack": "^3.3.0"
   },
   "scripts": {
-    "build": "rollup -c rollup.config.js -- index.js",
+    "build": "webpack",
     "ci": "tnpm run lint && tnpm run test",
-    "compress": "uglifyjs --compress --mangle --output dist/data-set.min.js -- build/data-set.js",
+    "compress": "uglifyjs --compress --mangle --output dist/data-set-$npm_package_version.min.js -- build/data-set.js",
     "coverage": "npm run coverage-generator && npm run coverage-viewer",
     "coverage-viewer": "torch-coverage",
     "coverage-generator": "torch --coverage --renderer --recursive test/unit",
