--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   "author": "https://github.com/orgs/antvis/people",
   "license": "MIT",
   "devDependencies": {
-    "@lite-js/torch": "^0.1.5",
+    "@lite-js/torch": "^0.2.0-beta1",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-runtime": "^6.23.0",
     "chai": "^4.0.1",
     "commander": "^2.9.0",
     "eslint": "^3.19.0",
