bin.hexagon: support binWidth and bins and area encoding, etc.

--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.0.1",
     "commander": "^2.9.0",
+    "connect": "^3.6.3",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-egg": "^4.2.0",
+    "get-port": "^3.1.0",
+    "open": "0.0.5",
     "pre-commit": "^1.2.2",
+    "serve-static": "^1.12.4",
     "uglify-js": "^3.0.15",
     "webpack": "^3.3.0"
   },
@@ -40,6 +44,9 @@
     "coverage": "npm run coverage-generator && npm run coverage-viewer",
     "coverage-viewer": "torch-coverage",
     "coverage-generator": "torch --coverage --renderer --recursive test/unit",
+    "demos": "$(npm bin)/electron ./demos/app.js",
+    "demos-web": "node ./demos/app.js --web --port 2045",
+    "dev": "webpack --config webpack-dev.config.js",
     "dist": "rm -rf dist && mkdir dist && npm run build && npm run compress",
     "lint": "eslint ./",
     "lint-fix": "eslint --fix ./",
@@ -63,7 +70,6 @@
     "d3-dsv": "^1.0.5",
     "d3-geo": "^1.6.4",
     "d3-geo-projection": "^2.1.2",
-    "d3-hexbin": "^0.2.2",
     "d3-hierarchy": "^1.1.5",
     "d3-voronoi": "^1.1.2",
     "lodash": "^4.17.4",
