--- a/.eslintrc
+++ b/.eslintrc
@@ -2,10 +2,20 @@
   "extends": [
     "egg"
   ],
+  "globals": {
+    "$": true,
+    "DataSet": true,
+    "G2": true,
+    "d3": true,
+    "_": true
+  },
   "parser": "babel-eslint",
   "parserOptions": {
     "sourceType": "module"
   },
+  "plugins": [
+    "html"
+  ],
   "rules": {
     "no-bitwise": [
       0
