--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-egg": "^4.2.0",
+    "eslint-plugin-html": "^3.1.1",
     "get-port": "^3.1.0",
     "open": "0.0.5",
     "pre-commit": "^1.2.2",
@@ -48,8 +49,8 @@
     "demos-web": "node ./demos/app.js --web --port 2045",
     "dev": "webpack --config webpack-dev.config.js",
     "dist": "rm -rf dist && mkdir dist && npm run build && npm run compress",
-    "lint": "eslint ./",
-    "lint-fix": "eslint --fix ./",
+    "lint": "eslint --ext .html,.js ./",
+    "lint-fix": "eslint --ext .html,.js --fix ./",
     "prepublish": "npm run build",
     "test": "torch --renderer --recursive ./test/unit",
     "test-live": "torch --interactive --watch --recursive ./test/unit"
