--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "d3-voronoi": "^1.1.2",
     "lodash": "^4.17.4",
     "point-at-length": "^1.0.2",
+    "regression": "^2.0.0",
     "simple-statistics": "^4.1.0",
     "topojson-client": "^3.0.0",
     "wolfy87-eventemitter": "^5.1.0"
