--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@alipay/data-set",
-  "version": "0.5.0",
+  "name": "@antv/data-set",
+  "version": "0.5.1",
   "description": "data set with state management",
   "main": "build/data-set.js",
   "browser": "build/data-set.js",
@@ -17,7 +17,7 @@
   "author": "https://github.com/orgs/antvis/people",
   "license": "MIT",
   "devDependencies": {
-    "@lite-js/torch": "^0.2.0-beta1",
+    "@lite-js/torch": "^0.2.6",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
@@ -61,9 +61,6 @@
       "test"
     ],
     "silent": false
-  },
-  "publishConfig": {
-    "registry": "http://registry.npm.alibaba-inc.com"
   },
   "dependencies": {
     "d3-array": "^1.2.0",
