--- a/package.json
+++ b/package.json
@@ -31,12 +31,16 @@
     "chai": "^4.0.1",
     "commander": "^2.9.0",
     "connect": "^3.6.3",
+    "debug": "^3.1.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-egg": "^4.2.0",
     "eslint-plugin-html": "^3.1.1",
     "get-port": "^3.1.0",
+    "nightmare": "^2.10.0",
+    "nunjucks": "^3.0.1",
     "open": "0.0.5",
+    "parseurl": "^1.3.1",
     "pre-commit": "^1.2.2",
     "serve-static": "^1.12.4",
     "uglify-js": "^3.0.15",
