--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chai": "^4.0.1",
     "commander": "^2.9.0",
     "connect": "^3.6.3",
+    "d3-queue": "^3.0.7",
     "debug": "^3.1.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
@@ -43,6 +44,7 @@
     "parseurl": "^1.3.1",
     "pre-commit": "^1.2.2",
     "serve-static": "^1.12.4",
+    "shelljs": "^0.7.8",
     "uglify-js": "^3.0.15",
     "webpack": "^3.3.0"
   },
