--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "scripts": {
     "build": "webpack",
+    "watch": "webpack --config webpack-dev.config.js",
     "ci": "npm run lint && npm run test",
     "compress": "uglifyjs --compress --mangle --output dist/data-set.min.js -- build/data-set.js",
     "coverage": "npm run coverage-generator && npm run coverage-viewer",
@@ -57,7 +58,7 @@
     "coverage-generator": "torch --coverage --renderer --recursive test/unit",
     "demos": "$(npm bin)/electron ./demos/app.js",
     "demos-web": "node ./demos/app.js --web --port 2045",
-    "dev": "webpack --config webpack-dev.config.js",
+    "dev": "npm run watch & DEBUG=app:* npm run demos-web",
     "dist": "rm -rf dist && mkdir dist && npm run build && npm run compress",
     "lint": "eslint --ext .html,.js ./",
     "lint-fix": "eslint --ext .html,.js --fix ./",
