--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "connect": "^3.6.3",
     "d3-queue": "^3.0.7",
     "debug": "^3.1.0",
+    "electron": "~1.6.11",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-egg": "^4.2.0",
@@ -50,12 +51,11 @@
   },
   "scripts": {
     "build": "webpack",
-    "watch": "webpack --config webpack-dev.config.js",
     "ci": "npm run lint && npm run test",
     "compress": "uglifyjs --compress --mangle --output dist/data-set.min.js -- build/data-set.js",
     "coverage": "npm run coverage-generator && npm run coverage-viewer",
-    "coverage-viewer": "torch-coverage",
     "coverage-generator": "torch --coverage --renderer --recursive test/unit",
+    "coverage-viewer": "torch-coverage",
     "demos": "$(npm bin)/electron ./demos/app.js",
     "demos-web": "node ./demos/app.js --web --port 2045",
     "dev": "npm run watch & DEBUG=app:* npm run demos-web",
@@ -63,8 +63,10 @@
     "lint": "eslint --ext .html,.js ./",
     "lint-fix": "eslint --ext .html,.js --fix ./",
     "prepublish": "npm run dist",
+    "screenshot": "DEBUG=app:* ./bin/screenshot.js",
     "test": "torch --renderer --recursive ./test/unit",
-    "test-live": "torch --interactive --watch --recursive ./test/unit"
+    "test-live": "torch --interactive --watch --recursive ./test/unit",
+    "watch": "webpack --config webpack-dev.config.js"
   },
   "pre-commit": {
     "run": [
