chore: demos, scripts, etc.

--- a/package.json
+++ b/package.json
@@ -21,52 +21,54 @@
   "author": "https://github.com/orgs/antvis/people",
   "license": "MIT",
   "devDependencies": {
-    "@lite-js/torch": "^0.2.6",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-remove-strict-mode": "0.0.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "chai": "^4.0.1",
-    "commander": "^2.9.0",
-    "connect": "^3.6.3",
-    "d3-queue": "^3.0.7",
-    "debug": "^3.1.0",
-    "electron": "~1.6.11",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-config-egg": "^4.2.0",
-    "eslint-plugin-html": "^3.1.1",
-    "get-port": "^3.1.0",
-    "nightmare": "^2.10.0",
-    "nunjucks": "^3.0.1",
-    "open": "0.0.5",
-    "parseurl": "^1.3.1",
-    "pre-commit": "^1.2.2",
-    "serve-static": "^1.12.4",
-    "shelljs": "^0.7.8",
-    "uglify-js": "^3.0.15",
-    "webpack": "^3.3.0"
+    "@lite-js/torch": "~0.2.6",
+    "babel-core": "~6.26.0",
+    "babel-eslint": "~8.0.3",
+    "babel-loader": "~7.1.2",
+    "babel-plugin-transform-remove-strict-mode": "~0.0.2",
+    "babel-preset-env": "~1.6.1",
+    "chai": "~4.1.2",
+    "cheerio": "~1.0.0-rc.2",
+    "commander": "~2.12.2",
+    "connect": "~3.6.5",
+    "d3-queue": "~3.0.7",
+    "debug": "~3.1.0",
+    "electron": "~1.7.9",
+    "eslint": "~3.19.0",
+    "eslint-config-airbnb": "~15.0.1",
+    "eslint-config-egg": "~4.2.0",
+    "eslint-plugin-html": "~3.1.1",
+    "get-port": "~3.2.0",
+    "nightmare": "~2.10.0",
+    "nunjucks": "~3.0.1",
+    "open": "~0.0.5",
+    "parseurl": "~1.3.2",
+    "pre-commit": "~1.2.2",
+    "serve-static": "~1.13.1",
+    "shelljs": "~0.7.8",
+    "uglify-js": "~3.1.10",
+    "webpack": "~3.10.0"
   },
   "scripts": {
     "build": "webpack",
     "ci": "npm run lint && npm run test",
-    "compress": "uglifyjs --compress --mangle --output dist/data-set.min.js -- build/data-set.js",
+    "compress": "uglifyjs -c -m -o dist/data-set.min.js -- build/data-set.js",
     "coverage": "npm run coverage-generator && npm run coverage-viewer",
-    "coverage-generator": "torch --coverage --renderer --recursive test/unit",
+    "coverage-generator": "torch --compile --coverage --renderer --recursive test/unit",
     "coverage-viewer": "torch-coverage",
-    "demos": "$(npm bin)/electron ./demos/app.js",
+    "demos": "electron ./demos/app.js",
     "demos-web": "node ./demos/app.js --web --port 2045",
-    "dev": "npm run watch & DEBUG=app:* npm run demos-web",
-    "dist": "rm -rf dist && mkdir dist && npm run build && npm run compress",
+    "dev": "npm run watch & npm run demos-web",
+    "dist": "npm run mkdir-dist && npm run build && npm run compress",
     "lint": "eslint --ext .html,.js ./",
     "lint-fix": "eslint --ext .html,.js --fix ./",
-    "prepublish": "npm run dist",
-    "screenshot": "DEBUG=app:* ./bin/screenshot.js",
+    "mkdir-dist": "node ./bin/mkdir-dist.js",
+    "prepublishOnly": "npm run dist",
+    "screenshot": "node ./bin/screenshot.js",
     "test": "torch --renderer --recursive ./test/unit",
     "test-live": "torch --interactive --watch --recursive ./test/unit",
-    "watch": "webpack --config webpack-dev.config.js"
+    "watch": "webpack --config webpack-dev.config.js",
+    "win-dev": "node ./bin/win-dev.js"
   },
   "pre-commit": {
     "run": [
@@ -76,19 +78,19 @@
     "silent": false
   },
   "dependencies": {
-    "d3-array": "^1.2.0",
-    "d3-composite-projections": "^1.2.0",
-    "d3-dsv": "^1.0.5",
-    "d3-geo": "^1.6.4",
-    "d3-geo-projection": "^2.1.2",
-    "d3-hierarchy": "^1.1.5",
-    "d3-sankey": "^0.7.1",
-    "d3-voronoi": "^1.1.2",
-    "lodash": "^4.17.4",
-    "point-at-length": "^1.0.2",
-    "regression": "^2.0.0",
-    "simple-statistics": "^4.1.0",
-    "topojson-client": "^3.0.0",
-    "wolfy87-eventemitter": "^5.1.0"
+    "d3-array": "~1.2.0",
+    "d3-composite-projections": "~1.2.0",
+    "d3-dsv": "~1.0.5",
+    "d3-geo": "~1.6.4",
+    "d3-geo-projection": "~2.1.2",
+    "d3-hierarchy": "~1.1.5",
+    "d3-sankey": "~0.7.1",
+    "d3-voronoi": "~1.1.2",
+    "lodash": "~4.17.4",
+    "point-at-length": "~1.0.2",
+    "regression": "~2.0.0",
+    "simple-statistics": "~4.1.0",
+    "topojson-client": "~3.0.0",
+    "wolfy87-eventemitter": "~5.1.0"
   }
 }
