--- a/package.json
+++ b/package.json
@@ -37,7 +37,11 @@
     "eslint": "~3.19.0",
     "eslint-config-airbnb": "~15.0.1",
     "eslint-config-egg": "~4.2.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-html": "~3.1.1",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "get-port": "~3.2.0",
     "nightmare": "~2.10.0",
     "nunjucks": "~3.0.1",
