feat(diagram): support dagre layout

--- a/package.json
+++ b/package.json
@@ -83,10 +83,11 @@
     "d3-dsv": "~1.0.5",
     "d3-geo": "~1.6.4",
     "d3-geo-projection": "~2.1.2",
-    "d3-hexjson": "^1.0.1",
+    "d3-hexjson": "~1.0.1",
     "d3-hierarchy": "~1.1.5",
     "d3-sankey": "~0.7.1",
     "d3-voronoi": "~1.1.2",
+    "dagre": "~0.8.2",
     "lodash": "~4.17.4",
     "point-at-length": "~1.0.2",
     "regression": "~2.0.0",
