--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/data-set",
-  "version": "0.8.7",
+  "version": "0.8.7-beta.1",
   "description": "data set with state management",
   "main": "build/data-set.js",
   "browser": "build/data-set.js",
