fix: use @antv/hierarchy instead

--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "eslint-config-airbnb": "~15.0.1",
     "eslint-config-egg": "~4.2.0",
     "eslint-plugin-html": "~3.1.1",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.7.0",
     "get-port": "~3.2.0",
     "nightmare": "~2.10.0",
     "nunjucks": "~3.0.1",
@@ -80,6 +82,7 @@
     "silent": false
   },
   "dependencies": {
+    "@antv/hierarchy": "~0.1.0-beta.2",
     "d3-array": "~1.2.0",
     "d3-composite-projections": "~1.2.0",
     "d3-dsv": "~1.0.5",
