--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/data-set",
-  "version": "0.8.8",
+  "version": "0.8.9",
   "description": "data set with state management",
   "main": "build/data-set.js",
   "browser": "build/data-set.js",
@@ -51,6 +51,7 @@
     "pre-commit": "~1.2.2",
     "serve-static": "~1.13.1",
     "shelljs": "~0.7.8",
+    "string-replace-loader": "^2.1.1",
     "uglify-js": "~3.1.10",
     "webpack": "~3.10.0"
   },
