--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "author": "https://github.com/orgs/antvis/people",
   "license": "MIT",
   "devDependencies": {
-    "@lite-js/torch": "~0.2.6",
+    "torchjs": "~2.0.4",
     "babel-cli": "~6.26.0",
     "babel-core": "~6.26.0",
     "babel-eslint": "~8.0.3",
@@ -35,7 +35,7 @@
     "connect": "~3.6.5",
     "d3-queue": "~3.0.7",
     "debug": "~3.1.0",
-    "electron": "~1.8.4",
+    "electron": "~2.0.6",
     "eslint": "~3.19.0",
     "eslint-config-airbnb": "~15.0.1",
     "eslint-config-egg": "~4.2.0",
