chore(dev): upgrade babel

--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   "author": "https://github.com/orgs/antvis/people",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "~6.26.0",
-    "babel-core": "~6.26.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "babel-eslint": "~8.0.3",
-    "babel-loader": "~7.1.2",
+    "babel-loader": "^8.0.0",
     "babel-plugin-transform-remove-strict-mode": "~0.0.2",
-    "babel-preset-env": "~1.6.1",
     "body-parser": "^1.18.2",
     "chai": "~4.1.2",
     "cheerio": "~1.0.0-rc.2",
