--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "serve-static": "~1.13.1",
     "shelljs": "~0.7.8",
     "string-replace-loader": "^2.1.1",
-    "torchjs": "~2.0.4",
+    "torchjs": "~2.1.0",
     "uglify-js": "~3.1.10",
     "webpack": "~3.10.0"
   },
@@ -63,7 +63,7 @@
     "ci": "npm run lint && npm run test && npm run test-bugs",
     "compress": "uglifyjs -c -m -o dist/data-set.min.js -- build/data-set.js",
     "coverage": "npm run coverage-generator && npm run coverage-viewer",
-    "coverage-generator": "torch --compile --coverage --renderer --recursive test/unit",
+    "coverage-generator": "torch --coverage --renderer --source-pattern src/**/*.js,src/*.js --recursive test/unit",
     "coverage-viewer": "torch-coverage",
     "demos": "electron ./demos/app.js",
     "demos-web": "node ./demos/app.js --web --port 2045",
