--- a/package.json
+++ b/package.json
@@ -1,10 +1,28 @@
 {
   "name": "@antv/data-set",
-  "version": "0.10.2",
+  "version": "0.11.0",
   "description": "data set with state management",
-  "main": "build/data-set.js",
+  "main": "lib/index.js",
   "browser": "build/data-set.js",
-  "module": "src/index.js",
+  "module": "lib/index.js",
+  "dependencies": {
+    "@antv/hierarchy": "^0.6.0",
+    "@antv/util": "^2.0.0",
+    "d3-composite-projections": "^1.2.0",
+    "d3-dsv": "^1.0.5",
+    "d3-geo": "~1.6.4",
+    "d3-geo-projection": "~2.1.2",
+    "d3-hexjson": "^1.0.1",
+    "d3-hierarchy": "^1.1.5",
+    "d3-sankey": "^0.7.1",
+    "d3-voronoi": "^1.1.2",
+    "dagre": "^0.8.2",
+    "point-at-length": "^1.0.2",
+    "regression": "^2.0.0",
+    "simple-statistics": "^6.1.0",
+    "topojson-client": "^3.0.0",
+    "wolfy87-eventemitter": "^5.1.0"
+  },
   "homepage": "https://github.com/antvis/data-set",
   "repository": {
     "type": "git",
@@ -20,6 +38,40 @@
   ],
   "author": "https://github.com/orgs/antvis/people",
   "license": "MIT",
+  "scripts": {
+    "build": "webpack",
+    "build-lib": "tsc",
+    "bundler": "electron ./bundler/app.js",
+    "ci": "npm run lint && npm run test && npm run test-bugs",
+    "compress": "uglifyjs -c -m -o dist/data-set.min.js -- build/data-set.js",
+    "coverage": "npm run coverage-generator && npm run coverage-viewer",
+    "coverage-generator": "torch --coverage --renderer --source-pattern src/**/*.js,src/*.js --recursive test/unit",
+    "coverage-viewer": "torch-coverage",
+    "demos": "electron ./demos/app.js",
+    "demos-web": "node ./demos/app.js --web --port 2045",
+    "dev": "npm run watch & npm run demos-web",
+    "dist": "npm run mkdir-dist && npm run build && npm run compress",
+    "lint": "eslint --ext .ts ./src",
+    "lint-fix": "eslint --ext .ts --fix ./src",
+    "mkdir-dist": "node ./bin/mkdir-dist.js",
+    "prepublishOnly": "npm run build-lib && npm run dist",
+    "screenshot": "node ./bin/screenshot.js",
+    "start": "npm run dev",
+    "test": "torch --compile --renderer --recursive ./test/unit",
+    "test-bugs": "torch --compile --renderer --recursive ./test/bugs",
+    "test-live": "torch --compile --interactive --watch --recursive ./test/unit",
+    "test-bugs-live": "torch --compile --interactive --watch --recursive ./test/bugs",
+    "watch": "webpack --config webpack-dev.config.js",
+    "win-dev": "node ./bin/win-dev.js"
+  },
+  "pre-commit": {
+    "run": [
+      "lint",
+      "test",
+      "test-bugs"
+    ],
+    "silent": false
+  },
   "devDependencies": {
     "@antv/torch": "^1.0.6",
     "@types/chai": "^4.2.7",
@@ -60,57 +112,5 @@
     "typescript": "^3.7.3",
     "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10"
-  },
-  "scripts": {
-    "build": "webpack",
-    "build-lib": "tsc",
-    "bundler": "electron ./bundler/app.js",
-    "ci": "npm run lint && npm run test && npm run test-bugs",
-    "compress": "uglifyjs -c -m -o dist/data-set.min.js -- build/data-set.js",
-    "coverage": "npm run coverage-generator && npm run coverage-viewer",
-    "coverage-generator": "torch --coverage --renderer --source-pattern src/**/*.js,src/*.js --recursive test/unit",
-    "coverage-viewer": "torch-coverage",
-    "demos": "electron ./demos/app.js",
-    "demos-web": "node ./demos/app.js --web --port 2045",
-    "dev": "npm run watch & npm run demos-web",
-    "dist": "npm run mkdir-dist && npm run build && npm run compress",
-    "lint": "eslint --ext .ts ./src",
-    "lint-fix": "eslint --ext .ts --fix ./src",
-    "mkdir-dist": "node ./bin/mkdir-dist.js",
-    "prepublishOnly": "npm run build-lib && npm run dist",
-    "screenshot": "node ./bin/screenshot.js",
-    "start": "npm run dev",
-    "test": "torch --compile --renderer --recursive ./test/unit",
-    "test-bugs": "torch --compile --renderer --recursive ./test/bugs",
-    "test-live": "torch --compile --interactive --watch --recursive ./test/unit",
-    "test-bugs-live": "torch --compile --interactive --watch --recursive ./test/bugs",
-    "watch": "webpack --config webpack-dev.config.js",
-    "win-dev": "node ./bin/win-dev.js"
-  },
-  "pre-commit": {
-    "run": [
-      "lint",
-      "test",
-      "test-bugs"
-    ],
-    "silent": false
-  },
-  "dependencies": {
-    "@antv/hierarchy": "^0.6.0",
-    "@antv/util": "^2.0.0",
-    "d3-composite-projections": "^1.2.0",
-    "d3-dsv": "^1.0.5",
-    "d3-geo": "~1.6.4",
-    "d3-geo-projection": "~2.1.2",
-    "d3-hexjson": "^1.0.1",
-    "d3-hierarchy": "^1.1.5",
-    "d3-sankey": "^0.7.1",
-    "d3-voronoi": "^1.1.2",
-    "dagre": "^0.8.2",
-    "point-at-length": "^1.0.2",
-    "regression": "^2.0.0",
-    "simple-statistics": "^6.1.0",
-    "topojson-client": "^3.0.0",
-    "wolfy87-eventemitter": "^5.1.0"
   }
 }
