--- a/package.json
+++ b/package.json
@@ -39,22 +39,20 @@
   "author": "https://github.com/orgs/antvis/people",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
+    "build": "rm -rf build && webpack",
     "build-lib": "tsc",
     "bundler": "electron ./bundler/app.js",
     "ci": "npm run lint && npm run test && npm run test-bugs",
-    "compress": "uglifyjs -c -m -o dist/data-set.min.js -- build/data-set.js",
     "coverage": "npm run coverage-generator && npm run coverage-viewer",
     "coverage-generator": "torch --coverage --renderer --source-pattern src/**/*.js,src/*.js --recursive test/unit",
     "coverage-viewer": "torch-coverage",
     "demos": "electron ./demos/app.js",
     "demos-web": "node ./demos/app.js --web --port 2045",
     "dev": "npm run watch & npm run demos-web",
-    "dist": "npm run mkdir-dist && npm run build && npm run compress",
+    "dist": "rm -rf dist && webpack --output-path=./dist --mode=production",
     "lint": "eslint --ext .ts ./src",
     "lint-fix": "eslint --ext .ts --fix ./src",
-    "mkdir-dist": "node ./bin/mkdir-dist.js",
-    "prepublishOnly": "npm run build-lib && npm run dist",
+    "prepublishOnly": "npm run build-lib && npm run build && npm run dist",
     "screenshot": "node ./bin/screenshot.js",
     "start": "npm run dev",
     "test": "torch --compile --renderer --recursive ./test/unit",
