--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/data-set",
-  "version": "0.11.2",
+  "version": "0.11.3",
   "description": "data set with state management",
   "main": "lib/index.js",
   "browser": "build/data-set.js",
@@ -12,7 +12,7 @@
     "d3-dsv": "^1.0.5",
     "d3-geo": "~1.6.4",
     "d3-geo-projection": "~2.1.2",
-    "d3-hexjson": "^1.0.1",
+    "d3-hexjson": "~1.0.1",
     "d3-hierarchy": "^1.1.5",
     "d3-sankey": "^0.9.1",
     "d3-voronoi": "^1.1.2",
