--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,9 @@
     "sourceType": "module",
     "impliedStrict": true
   },
+  "env": {
+    "node":true
+  },
   "overrides": [
     {
       "files": ["test/**/*"],
@@ -39,6 +42,7 @@
     "@typescript-eslint/no-unsafe-declaration-merging":"off",
     "@typescript-eslint/prefer-ts-expect-error":"off",
     "@typescript-eslint/ban-ts-comment":"off",
-    "@typescript-eslint/ban-types":"off"
+    "@typescript-eslint/ban-types":"off",
+    "@typescript-eslint/no-var-requires":"off"
   }
 }
