--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
   "exports": {
     ".": {
       "import": "./build/data-set.js",
-      "require": "./build/data-set.js"
+      "require": "./build/data-set.js",
+      "types": "./lib/src/index.d.ts"
     },
     "./transform": {
       "import": "./build/transform/index.mjs",
       "require": "./build/transform/index.js",
       "types": "./lib/src/transform/index.d.ts"
+    },
+    "./*": {
+      "import": "./build/*.mjs",
+      "require": "./build/*.js",
+      "types": "./build/*.d.ts"
     }
   },
   "dependencies": {
@@ -53,8 +59,7 @@
   "author": "https://github.com/orgs/antvis/people",
   "license": "MIT",
   "scripts": {
-    "build": "rm -rf build  && rollup --config  && webpack",
-    "build2": "rm -rf build  && tsup  && webpack",
+    "build": "rm -rf build  && tsup  && webpack",
     "build-lib": "rm -rf lib && tsc",
     "bundler": "electron ./bundler/app.js",
     "ci": "npm run lint && npm run test && npm run test-bugs",
