--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "module": "lib/index.js",
   "exports": {
     ".": {
-      "import": "./build/data-set.js",
-      "require": "./build/data-set.js",
-      "types": "./lib/src/index.d.ts"
+      "default": "./lib/index.js",
+      "types": "./lib/index.d.ts"
     },
     "./transform": {
       "import": "./build/transform/index.mjs",
@@ -38,7 +37,6 @@
     "point-at-length": "^1.0.2",
     "prettier": "^3.2.5",
     "regression": "^2.0.0",
-    "rollup-plugin-esbuild": "^6.1.1",
     "simple-statistics": "^6.1.0",
     "topojson-client": "^3.0.0",
     "wolfy87-eventemitter": "^5.1.0"
@@ -92,8 +90,6 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-node-resolve": "^15.2.3",
     "@swc/core": "^1.4.6",
     "@types/d3-dsv": "^1.0.36",
     "@types/d3-geo": "^1.11.1",
@@ -127,7 +123,6 @@
     "open": "~0.0.5",
     "parseurl": "~1.3.2",
     "pre-commit": "~1.2.2",
-    "rollup": "^4.13.0",
     "serve-static": "~1.13.1",
     "shelljs": "~0.7.8",
     "string-replace-loader": "^2.1.1",
