--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
+    "module": "ESNext",
     "lib": ["dom", "es2017"],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
